<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bignerdranch.android.parkmycar.ParkActivity">

    <ImageView
        android:id="@+id/place_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/parking"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_header"/>
    <TextView
        android:id="@+id/place_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:text="@string/parking_title"
        android:layout_marginLeft="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_park"
            android:id="@+id/button_park"
            android:layout_above="@+id/button_unpark"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ask_level"
            android:layout_gravity="left"
            android:checked="false"
            android:text="@string/ask_levels"
            android:textSize="18sp"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/level_select"
            android:spinnerMode="dropdown"
            android:visibility="invisible"
            android:layout_below="@+id/text_select"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_level_select"
            android:id="@+id/text_select"
            android:textSize="18sp"
            android:layout_below="@+id/ask_level"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="37dp"
            android:textStyle="normal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_unpark"
            android:id="@+id/button_unpark"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:enabled="false"/>

    </RelativeLayout>

</LinearLayout>
